# Pico_W_Temperatura_Nucleo_ADC

./: CMakeLists.txt  main.c
